--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav><ol>
     <li><a href="index.html" class="current">Home</a></li>
     <li><a href="combined.html#2023">2023</a></li>
-    <li><a href="combed.html#2024">2024</a></li>
+    <li><a href="combined.html#2024">2024</a></li>
     <li><a href="combined.html#2025">2025</a></li>
   </ol></nav>
 </header>
