--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section>
     <h2>Bio</h2>
-    <p>Garrett is a junior on the skyline xc team. After a mediocre freshman year and a devestating season lasting injury his sophmore year, Garrett was more determended than ever to run well. He was one of the most consistant runners on the team getting that top 7 spot on the team every single race. He excelled in not just running but motivating, by always leading cheers and getting everyone hyped up while still staying positive. His favroite memories of the team was being at camp with everyone and playing games all day while still being full of energy. His favroite race was at holly when their team placed first and went up on stage togerther with a big trophie.</p>
+    <p>Garrett is a junior on the Skyline XC team. After a mediocre freshman year and a devastating season lasting injury his sophomore year, Garrett was more determined than ever to run well. He was one of the most consistent runners on the team, getting that top 7 spot every single race. He excelled in not just running, but motivating, by always leading cheers and getting everyone hyped up while still staying positive. His favorite memories of the team were being at camp with everyone and playing games all day while still being full of energy. His favorite race was at Holly, when their team placed first and went up on stage together with a big trophy.</p>
   </section>
 
   <section>
